set project back to basic